Configuirando o conteudo na pagina

--- a/index.html
+++ b/index.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Perfil</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <a href="#">Dev Full Stack</a>
-            <ul>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="https://github.com/Zemiro014" target="_blank">Contact</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <a href="#">Dev Full Stack</a>
+        <ul>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#">About</a></li>
+          <li>
+            <a href="https://github.com/Zemiro014" target="_blank">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section>
-
-        </section>
-        <section>
-
-        </section>
+      <section>
+        <div>
+          <img src="img/Profile Image.svg" alt="Meu perfil"/>
+        </div>
+        <h1>Alex Brown</h1>
+        <p>Full stack - Spring - React</p>
+      </section>
+      <section>
+          <h2>Portfolio</h2>
+          <div>
+            <img src="img/portfolio1.png" alt="portfolio1" />
+            <img src="img/portfolio2.png" alt="portfolio2" />
+            <img src="img/portfolio3.png" alt="portfolio3" />
+            <img src="img/portfolio4.png" alt="portfolio4" />
+            <img src="img/portfolio5.png" alt="portfolio5" />
+            <img src="img/portfolio6.png" alt="portfolio6" />
+          </div>
+      </section>
     </main>
     <footer>
-
+        <div>Siga-nos</div>
+        <div>
+            <a href=""><img src="img/instagram.png" alt="instagram"/></a>
+            <a href=""><img src="img/youtube.png" alt="youtube"/></a>
+        </div>
     </footer>
-</body>
+  </body>
 </html>
