--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="nav-container">
+      <nav class="nav-main">
         <a href="#">Dev Full Stack</a>
         <ul>
           <li><a href="#portfolio">Portfolio</a></li>
