--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Perfil</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -23,29 +29,29 @@
     <main>
       <section>
         <div>
-          <img src="img/Profile Image.svg" alt="Meu perfil"/>
+          <img src="img/Profile Image.svg" alt="Meu perfil" />
         </div>
         <h1>Alex Brown</h1>
         <p>Full stack - Spring - React</p>
       </section>
       <section>
-          <h2>Portfolio</h2>
-          <div>
-            <img src="img/portfolio1.png" alt="portfolio1" />
-            <img src="img/portfolio2.png" alt="portfolio2" />
-            <img src="img/portfolio3.png" alt="portfolio3" />
-            <img src="img/portfolio4.png" alt="portfolio4" />
-            <img src="img/portfolio5.png" alt="portfolio5" />
-            <img src="img/portfolio6.png" alt="portfolio6" />
-          </div>
+        <h2>Portfolio</h2>
+        <div>
+          <img src="img/portfolio1.png" alt="portfolio1" />
+          <img src="img/portfolio2.png" alt="portfolio2" />
+          <img src="img/portfolio3.png" alt="portfolio3" />
+          <img src="img/portfolio4.png" alt="portfolio4" />
+          <img src="img/portfolio5.png" alt="portfolio5" />
+          <img src="img/portfolio6.png" alt="portfolio6" />
+        </div>
       </section>
     </main>
     <footer>
-        <div>Siga-nos</div>
-        <div>
-            <a href=""><img src="img/instagram.png" alt="instagram"/></a>
-            <a href=""><img src="img/youtube.png" alt="youtube"/></a>
-        </div>
+      <div>Siga-nos</div>
+      <div>
+        <a href=""><img src="img/instagram.png" alt="instagram" /></a>
+        <a href=""><img src="img/youtube.png" alt="youtube" /></a>
+      </div>
     </footer>
   </body>
 </html>
