--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
         <h1 class="profile-title">Alex Brown</h1>
         <p class="profile-description">Full stack - Spring - React</p>
       </section>
-      <section>
-        <h2>Portfolio</h2>
-        <div>
-          <img src="img/portfolio1.png" alt="portfolio1" />
-          <img src="img/portfolio2.png" alt="portfolio2" />
-          <img src="img/portfolio3.png" alt="portfolio3" />
-          <img src="img/portfolio4.png" alt="portfolio4" />
-          <img src="img/portfolio5.png" alt="portfolio5" />
-          <img src="img/portfolio6.png" alt="portfolio6" />
+      <section id="portfolio">
+        <h2 class="portfolio-title">Portfolio</h2>
+        <div class="portfolio-container">
+          <img class="portfolio-item" src="img/portfolio1.png" alt="portfolio1" />
+          <img class="portfolio-item" src="img/portfolio2.png" alt="portfolio2" />
+          <img class="portfolio-item" src="img/portfolio3.png" alt="portfolio3" />
+          <img class="portfolio-item" src="img/portfolio4.png" alt="portfolio4" />
+          <img class="portfolio-item" src="img/portfolio5.png" alt="portfolio5" />
+          <img class="portfolio-item" src="img/portfolio6.png" alt="portfolio6" />
         </div>
       </section>
     </main>
