--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
       </section>
     </main>
     <footer>
-      <div>Siga-nos</div>
-      <div>
+      <div class="footer-title">Siga-nos</div>
+      <div class="social-container">
         <a href=""><img src="img/instagram.png" alt="instagram" /></a>
         <a href=""><img src="img/youtube.png" alt="youtube" /></a>
       </div>
